Fixed the bootstrap buggy overlapping

--- a/src/app/modules/profiles/sellerprofile/fields/main/crud/add/professionalAddComponent/professional.component.css
+++ b/src/app/modules/profiles/sellerprofile/fields/main/crud/add/professionalAddComponent/professional.component.css
@@ -27,6 +27,12 @@
     width: 500px;
   }
 
+  .dg {
+    max-width: 100%;
+    max-height: 100%;
+    margin: 0px;
+  }
+
   button{
     margin: 5px;
   }
