--- a/src/app/modules/profiles/sellerprofile/fields/main/crud/edit/professionalEditComponent/professional.component.css
+++ b/src/app/modules/profiles/sellerprofile/fields/main/crud/edit/professionalEditComponent/professional.component.css
@@ -11,3 +11,9 @@
     margin: 3px auto;
     margin-bottom: 10px;
   }
+
+  .dg {
+    max-width: 100%;
+    max-height: 1005;
+    margin: 0px;
+  }
